# rcan

./: Cargo.toml  README.md  deny.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yaml  docs.yaml  tests.yaml  wasm.yaml
pr/10/docs/: crates.js  src-files.js
pr/10/docs/rcan/: all.html  enum.Expires.html  index.html  struct.Authorizer.html  struct.Rcan.html
pr/10/docs/trait.impl/core/clone/: trait.Clone.js
pr/10/docs/trait.impl/core/cmp/: trait.PartialEq.js
pr/10/docs/trait.impl/core/fmt/: trait.Debug.js
pr/10/docs/trait.impl/core/marker/: trait.Freeze.js  trait.StructuralPartialEq.js
pr/10/docs/trait.impl/serde/de/: trait.Deserialize.js
pr/10/docs/trait.impl/serde/ser/: trait.Serialize.js
pr/8/docs/: settings.html
pr/8/docs/rcan/: constant.DST.html  index.html  sidebar-items.js  struct.RcanBuilder.html
pr/8/docs/search.desc/rcan/: rcan-desc-0-.js
pr/8/docs/src/rcan/: lib.rs.html
pr/8/docs/trait.impl/core/fmt/: trait.Display.js
pr/8/docs/trait.impl/core/marker/: trait.Copy.js  trait.Sync.js  trait.Unpin.js
pr/8/docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js
pr/9/docs/: help.html  search-index.js
pr/9/docs/rcan/: constant.DST.html  constant.VERSION.html  enum.CapabilityOrigin.html  struct.Payload.html  trait.Capability.html
pr/9/docs/trait.impl/core/cmp/: trait.Eq.js
pr/9/docs/trait.impl/core/marker/: trait.Send.js
pr/9/docs/trait.impl/core/panic/unwind_safe/: trait.UnwindSafe.js
src/: lib.rs
