[package]
name = "rcan"
version = "0.3.0"
edition = "2021"
readme = "README.md"
description = "Really simple user Controlled Authorization Networks"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
repository = "https://github.com/n0-computer/rcan"

rust-version = "1.81"

[dependencies]
anyhow = "1.0.95"
derive_more = { version = "2.0.1", features = ["debug", "display"] }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["serde"] }
hex = "0.4.3"
n0-future = "0.3.0"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
testresult = "0.4.1"
